# tracing_playground

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml  docker-compose.yaml  otel-collector-config.yaml
one/: Cargo.toml
one/src/: main.rs
playground_util/: Cargo.toml
playground_util/src/: lib.rs
proto/: hello.proto
three/: Cargo.toml
three/src/: main.rs  trace.rs
two/: Cargo.toml
two/src/: main.rs
