[workspace]
resolver = "2"
members = ["one", "playground_util", "three", "two"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
one = { path = "./one/" }
two = { path = "./two/" }
three = { path = "./three/" }
playground_util = { path = "./playground_util/" }

axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
http = "0.2.12"
reqwest = "0.11.27"
once_cell = "1.18.0"
opentelemetry = "0.21.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
    "time",
] }

tonic-build = "0.10.2"
