[package]
name = "one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"

reqwest = "0.11.22"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }

opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-http = "0.9.0"
opentelemetry-jaeger = "0.19.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version="0.3.17", features = ["env-filter", "json"] }
