[package]
name = "one"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
axum = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
playground_util = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
