[package]
name = "three"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.27"
tower = "0.4.13"
tonic = "0.8.3"
prost = "0.11.9"
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

opentelemetry = { version = "0.17.0", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = "0.16.0"
opentelemetry-http = "0.6.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version="0.3.17", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.8.4"
