[package]
name = "three"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { workspace = true }
hyper = "0.14.27"
opentelemetry = { workspace = true }
playground_util = { workspace = true }
prost = "0.12.1"
tonic = "0.10.2"
tower = "0.4.13"

tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
