[package]
name = "two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"

http = "0.2.9"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.1"

opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = "0.19.0"
opentelemetry-http = "0.9.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version="0.3.17", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.10.2"
