[package]
name = "two"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
prost = "0.12.1"
tonic = "0.10.2"

once_cell = { workspace = true }
opentelemetry = { workspace = true }
playground_util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
